<resources>
    <string name="app_name">新闻</string>

    <!--下拉刷新组件-->
    <string name="pull_to_refresh_pull_label_it">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label_it">松开即可刷新</string>
    <string name="pull_to_refresh_refreshing_label_it">正在刷新数据...</string>
    <string name="pull_to_refresh_updated_at">上次更新时间:%1$s</string>
    <string name="pull_to_refresh_pull_label" translatable="false">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label" translatable="false">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label" translatable="false">加载中&#8230;</string>
    <string name="pull_to_refresh_tap_label" translatable="false">点击刷新</string>


    <!-- 新闻 -->
    <string name="news_toast_delete">将为你减少此类新闻</string>
    <string name="news_toast_noData">没有更多数据了</string>
    <string name="news_commentsize">%1$s评论</string>
    <string name="detail_header_tv">下拉一下，看点儿不一样的</string>
    <string name="news_toast">已为您推荐了%1$s条新资讯</string>
    <string name="finish">完成</string>
    <string name="edit">编辑</string>
    <string name="willUrl">http://will-ls.top/</string>
    <string name="githubUrl">https://github.com/Will-Ls</string>
    <string name="email">liwanglin_001@163.com</string>

    <!-- 意见反馈 -->
    <string name="string_tv_new_suggest">新需求建议</string>
    <string name="string_tv_question_classify">问题类型</string>
    <string name="string_tv_suggest_content_hint">请输入您的宝贵建议和问题(必填)</string>
    <string name="string_tv_suggest_phone">联系方式 : </string>
    <string name="string_tv_suggest_phone_hint">必填</string>
    <string name="string_confirm_ing">正在提交,请稍后</string>
    <string name="update_notice_finish">下载完成，点击浏览</string>
    <string name="update_notice_nomemory">存储空间不足，请清理空间后，重新下载。</string>
    <string name="update_notice_error">下载过程中出错，请重新下载。</string>


    //新闻频道
    <string-array name="news_channel_name">
        <item>头条</item>
        <item>娱乐</item>
        <item>军事</item>
        <item>体育</item>
        <item>财经</item>
        <item>科技</item>
        <item>历史</item>
        <item>台湾</item>
        <item>汽车</item>
        <item>时尚</item>
        <item>国学</item>
        <item>文化</item>
        <item>星座</item>
        <item>读书</item>
        <item>游戏</item>
        <item>电影</item>
        <item>国际</item>
        <item>朋友圈热闻</item>
        <item>美食</item>
        <item>公益</item>
        <item>讲堂</item>
        <item>要闻</item>
        <item>萌宠</item>
        <item>旅游</item>
    </string-array>

    <string-array name="news_channel_id">
        <item>SYLB10,SYDT10</item>
        <item>YL53,FOCUSYL53</item>
        <item>JS83,FOCUSJS83</item>
        <item>TY43,FOCUSTY43,TYLIVE,TYTOPIC</item>
        <item>CJ33,FOCUSCJ33,HNCJ33</item>
        <item>KJ123,FOCUSKJ123</item>
        <item>LS153,FOCUSLS153</item>
        <item>TW73</item>
        <item>QC45,FOCUSQC45</item>
        <item>SS78,FOCUSSS78</item>
        <item>GXPD,FOCUSGXPD</item>
        <item>WH25,FOCUSWH25</item>
        <item>XZ09,FOCUSXZ09</item>
        <item>DS57,FOCUSDS57</item>
        <item>YX11,FOCUSYX11</item>
        <item>DYPD</item>
        <item>GJPD</item>
        <item>CIRCLEHOT</item>
        <item>DELIC</item>
        <item>GYPD,FOCUSGYPD</item>
        <item>FORUM,FOCUSFORM</item>
        <item>YAOWEN223</item>
        <item>MENGCHONG,FOCUSMENGCHONG</item>
        <item>LY67,FOCUSLY67,SECNAVLY67</item>

    </string-array>

    <!-- 建议类型 -->
    <string-array name="array_suggest_type">
        <item>新需求建议</item>
        <item>功能建议</item>
        <item>界面建议</item>
        <item>操作问题</item>
        <item>质量问题</item>
        <item>投诉</item>
        <item>其他</item>
    </string-array>


</resources>
