<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/ar_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="反馈"
            android:layout_toRightOf="@id/ar_back"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ar_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_read_back" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_alignParentBottom="true"
            android:background="#e6e6e6" />

    </RelativeLayout>

    <!-- 问题类型 -->



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
         >

        <TextView
            style="@style/style_textview_one"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/string_tv_question_classify"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/linear_question_classify"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_suggest_type"
                style="@style/style_textview_one"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/string_tv_new_suggest"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/img_suggest_type"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:src="@drawable/arrow_down" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#e6e6e6" />
    <!-- 反馈内容 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <EditText
            android:id="@+id/et_suggest_content"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@null"
            android:gravity="left|top"
            android:hint="@string/string_tv_suggest_content_hint"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="14sp" />
        <ImageView
            android:layout_marginStart="10dp"
            android:layout_alignParentBottom="true"
            android:layout_width="50dp"
            android:layout_height="50dp" />
        <TextView
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <!-- 联系方式 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#e6e6e6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/style_textview_one"
            android:layout_marginLeft="10dp"
            android:text="@string/string_tv_suggest_phone"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_suggest_phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:hint="@string/string_tv_suggest_phone_hint"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- 提交按钮 -->

    <Button
        android:textColor="@color/colorGray"
        android:id="@+id/btn_confirm"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/sure_bg"
        android:text="提交"
        android:textSize="18sp" />

</LinearLayout>